--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      <p>© SANTOINE 2015</p>
+      <p>© SANTOINE 2015-2018</p>
     </div>
 
   </div>
